--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -32,6 +32,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [Ridge regression for trend filtering](ridge_trend_filter.html)
 * [Ridge regression via conjugate gradient](ridge_conjugate_gradient.html)
 * [EM for hyperparameters Ridge regression](ridge_em.html)
+* [EM for hyperparameters of Ridge regression using SVD](ridge_em_svd.html)
 
 # Lasso
 
