--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -101,7 +101,9 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 
 * [explore t test on log-transformed data](simple_transform_simulation.html)
 
+# flash-drift
 
+* [look at SVD applied to tree structured data](tree_pca.html)
 
 [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm
 [rstudio]: https://www.rstudio.com/products/rstudio/download/preview/
