--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -66,7 +66,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 # NMF
 
 * [Try NMF on a simple simulation with sparse factors](nmf_sparse.html)
-* [Run NMF on covariance matrices, including tree-like case](nmf_simple_examples.Rmd)
+* [Run NMF on covariance matrices, including tree-like case](nmf_simple_examples.html)
 
 # Multinomial factor models
 
